tools/vendor/datatest-stable/tests/compile-fail/pattern-not-ident.rs
datatest_stable::harness! {
    { test = my_test, root = "abc", "xyz" = foo }
}
